--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="Image/Gordon Ramsay -  Image.jpg" alt="Rekha profile picture"></td>
+            <td><img src="image/Gordon Ramsay -  Image.jpg" alt="Rekha profile picture"></td>
             <td><h1>Rekha Sriraman</h1>
                 <p><em>Inside Sales Executive, <a href="https://www.linkedin.com/in/rekha-sriraman/"><strong>Manval Tester</strong></a>.</em></p>
                 <p>I was working in hardware IT company now looking for software line</p></td>
